Apr 24, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- cleanups, fixed some warnings, changed debug macros
- initial Enemy Territory Support (Testversion)
- increased version number

Apr 22, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- don't display warnings about NULL if scanning for maps is disabled. Thanks
  Jochen Baier for reporting.

Mar 24, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- popup window with levelshot when clicking on map column, currently supports
  jpg shots inside pk3 files for q3 and wolf.

Mar 15, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- added Serious Sam: The Second Encounter

Mar 10, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- store all map names lowercase, otherwise many maps are reported as
  not installed
- #define ZEXPORT if not already defined to fix compilation problems. Thanks
  Pierre Pronchery
- set private clients from reserve_slots variable for hl

Mar 07, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- game types for westernq3

Feb 19, 2003: Jordi Mallach <jordi@sindominio.net>
- update Catalan translation

Feb 09, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- adapt configure.in to install French translation

Feb 08, 2003: Alex Burger <alex_b@users.sourceforge.net>
- Added French translation

Feb 04, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- move server filter submenu to top level
- remove rarely used buttons from toolbar

Feb 03, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- merge patch from Jochen Baier to allow filtering for map and server name
- update German translation

Feb 01, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- fix high cpu load when dialogs are shown during launch phase. It's
  obviously no good idea to enter the gtk event loop from inside a
  gdk input callback.

Jan 20, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- image loading through gdk-pixbuf (png, jpeg etc.)
- splash screen, logo in $datadir/xqf/pixmaps/xqflogo.png
