@@ -1,3 +1,7 @@
+Apr 25, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
+- Icon for Enemy Territory
+- Config option for Master server
+
 Apr 24, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
 - cleanups, fixed some warnings, changed debug macros
 - initial Enemy Territory Support (Testversion)
